# channels

./: CMakeLists.txt  Channel.hpp  Common.hpp  Makefile  Queue.hpp  README.md  Select.hpp  main.cpp
.github/workflows/: cmake.yml
cmake/: CompileOptions.cmake  Development.cmake
tests/: CMakeLists.txt  Queue_test.cpp
